--- a/test/02_dataframes.ipynb
+++ b/test/02_dataframes.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import py7zr\n",
     "import requests\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -32,6 +33,45 @@
    "source": [
     "from paths import *\n",
     "from functions import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "## Get Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input\n",
+    "url = 'https://geoftp.ibge.gov.br/organizacao_do_territorio/malhas_territoriais/malhas_municipais/municipio_2020/UFs/SP/SP_Municipios_2020.zip'\n",
+    "filename = 'sp_ibge_250k.zip'\n",
+    "\n",
+    "# Get Data\n",
+    "get_download(url, filename, shps_path)\n",
+    "unzip(filename, shps_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input\n",
+    "url = 'http://datageo.ambiente.sp.gov.br/geoserver/datageo/LimiteMunicipal/wfs?version=1.0.0&request=GetFeature&outputFormat=SHAPE-ZIP&typeName=LimiteMunicipal'\n",
+    "filename = 'sp_igc_050k.zip'\n",
+    "\n",
+    "# Get Data\n",
+    "get_download(url, filename, shps_path)\n",
+    "unzip(filename, shps_path)"
    ]
   },
   {
@@ -503,28 +543,10 @@
     "display(gdf.head())\n",
     "\n",
     "# Cria Cópia\n",
-    "gdf_macro = gdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gdf_macro = gdf\n",
+    "\n",
     "# Deleta Shapefile\n",
-    "file = 'sp_macrometropole'\n",
-    "shp = os.path.join(shps_path, '{}.shp'.format(file))\n",
-    "driver = ogr.GetDriverByName(\"ESRI Shapefile\")\n",
-    "\n",
-    "# Delete shapefile\n",
-    "if os.path.exists(shp):\n",
-    "    driver.DeleteDataSource(shp)\n",
-    "\n",
-    "# Delete other files\n",
-    "for i in os.listdir(os.path.dirname(shp)):\n",
-    "    if i.split('.')[0] == file:\n",
-    "        os.remove(os.path.join(shps_path, i))"
+    "delete_shapefile(shp)"
    ]
   },
   {
@@ -695,28 +717,10 @@
     "display(gdf.head())\n",
     "\n",
     "# Cria Cópia\n",
-    "gdf_gov = gdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gdf_gov = gdf\n",
+    "\n",
     "# Deleta Shapefile\n",
-    "file = 'sp_regioesgoverno'\n",
-    "shp = os.path.join(shps_path, '{}.shp'.format(file))\n",
-    "driver = ogr.GetDriverByName(\"ESRI Shapefile\")\n",
-    "\n",
-    "# Delete shapefile\n",
-    "if os.path.exists(shp):\n",
-    "    driver.DeleteDataSource(shp)\n",
-    "\n",
-    "# Delete other files\n",
-    "for i in os.listdir(os.path.dirname(shp)):\n",
-    "    if i.split('.')[0] == file:\n",
-    "        os.remove(os.path.join(shps_path, i))"
+    "delete_shapefile(shp)"
    ]
   },
   {
@@ -887,28 +891,10 @@
     "display(gdf.head())\n",
     "\n",
     "# Cria Cópia\n",
-    "gdf_adm = gdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gdf_adm = gdf\n",
+    "\n",
     "# Deleta Shapefile\n",
-    "file = 'sp_regioesadm'\n",
-    "shp = os.path.join(shps_path, '{}.shp'.format(file))\n",
-    "driver = ogr.GetDriverByName(\"ESRI Shapefile\")\n",
-    "\n",
-    "# Delete shapefile\n",
-    "if os.path.exists(shp):\n",
-    "    driver.DeleteDataSource(shp)\n",
-    "\n",
-    "# Delete other files\n",
-    "for i in os.listdir(os.path.dirname(shp)):\n",
-    "    if i.split('.')[0] == file:\n",
-    "        os.remove(os.path.join(shps_path, i))"
+    "delete_shapefile(shp)"
    ]
   },
   {
@@ -1016,16 +1002,7 @@
     "# Deleta Shapefile\n",
     "file = 'sp_ibge_250k'\n",
     "shp = os.path.join(shps_path, '{}.shp'.format(file))\n",
-    "driver = ogr.GetDriverByName(\"ESRI Shapefile\")\n",
-    "\n",
-    "# Delete shapefile\n",
-    "if os.path.exists(shp):\n",
-    "    driver.DeleteDataSource(shp)\n",
-    "\n",
-    "# Delete other files\n",
-    "for i in os.listdir(os.path.dirname(shp)):\n",
-    "    if i.split('.')[0] == file:\n",
-    "        os.remove(os.path.join(shps_path, i))"
+    "delete_shapefile(shp)"
    ]
   },
   {
@@ -1037,16 +1014,17 @@
     "# Deleta Shapefile\n",
     "file = 'sp_igc_050k'\n",
     "shp = os.path.join(shps_path, '{}.shp'.format(file))\n",
-    "driver = ogr.GetDriverByName(\"ESRI Shapefile\")\n",
-    "\n",
-    "# Delete shapefile\n",
-    "if os.path.exists(shp):\n",
-    "    driver.DeleteDataSource(shp)\n",
-    "\n",
-    "# Delete other files\n",
-    "for i in os.listdir(os.path.dirname(shp)):\n",
-    "    if i.split('.')[0] == file:\n",
-    "        os.remove(os.path.join(shps_path, i))"
+    "delete_shapefile(shp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "shutil.rmtree(shps_path, ignore_errors=True, onerror=print('Erro'))"
    ]
   },
   {
