--- a/test/03_compress_gpkg.ipynb
+++ b/test/03_compress_gpkg.ipynb
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import py7zr"
+    "import py7zr\n",
+    "import geopandas as gpd"
    ]
   },
   {
@@ -71,6 +72,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "## Write"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -98,8 +108,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -108,6 +117,40 @@
      "name": "#%%\n"
     }
    },
+   "source": [
+    "<br>\n",
+    "\n",
+    "## Read"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with py7zr.SevenZipFile(os.path.join(zips_path, 'sp_250k_wgs84.7z'), 'r') as archive:\n",
+    "    allfiles = archive.getnames()\n",
+    "    print(allfiles[0])\n",
+    "    \n",
+    "    # Quero apenas um arquivo por gpkg\n",
+    "    if len(allfiles) == 1:\n",
+    "        for filename, bio in archive.read(allfiles).items():\n",
+    "            print(bio)\n",
+    "\n",
+    "# Geodataframe\n",
+    "gdf = gpd.read_file(bio)\n",
+    "\n",
+    "# Results\n",
+    "print(gdf.crs)\n",
+    "gdf.plot()\n",
+    "display(gdf.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
