--- a/scripts/01_get_data.ipynb
+++ b/scripts/01_get_data.ipynb
@@ -40,9 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cf989cc4",
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -53,23 +54,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import requests\n",
+    "\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
-    "\n",
     "from osgeo import ogr\n",
-    "from zipfile import ZipFile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9be0be93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from paths import *\n",
-    "from functions import *"
+    "\n",
+    "import requests\n",
+    "from functions import *\n",
+    "from zipfile import ZipFile"
    ]
   },
   {
@@ -331,7 +324,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.6 ('pablocarreira-lastest')",
    "language": "python",
    "name": "python3"
   },
@@ -350,7 +343,7 @@
   "toc-autonumbering": true,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "4d2082c677fdf35794c222228cc7f22d43df5b8d8a9da3c3f9d9c2f356a8965c"
    }
   }
  },
