--- a/scripts/01_get_data.ipynb
+++ b/scripts/01_get_data.ipynb
@@ -40,9 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cf989cc4",
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
